<resources>
    <string name="app_name">LiNoo</string>
    <string name="drive_details_bundle_key">driveDetailsBundle</string>
    <string name="current_upcoming_drive_key">currentUpcomingDrives</string>
    <string name="notification_title">Message</string>
    <string name="shared_preference_key">key</string>
    <string name="shared_preference_value">value</string>

    <string name="firebase_database_child_drives">drives</string>
    <string name="subscribe_to_topic_drives">drives</string>

    <string name="error_enter_company_name">Enter the company name</string>
    <string name="error_enter_date"></string>
    <string name="error_enter_job_profile">Enter the job profile</string>
    <string name="error_enter_recruitment_location">Where is this drive being conducted?</string>
    <string name="erroe_enter_job_description">Give a detailed description about the drive</string>

    <!--line below referenced from: https://stackoverflow.com/a/12627660/5770629-->
    <string name="formatted_date" formatted="false">%d "/" %d "/" %d</string>

    <string name="error_enter_valid_email">Enter a valid email</string>
    <string name="toast_password_reset_instruction_sent">Password reset instruction sent to your email. Check that now.</string>
    <string name="error_email_not_registered">Email not registered</string>
    <string name="error_enter_password">Enter your password</string>
    <string name="toast_authentication_failed">Authentication failed. Kindly check your email and password.</string>
    <string name="error_password_less_than_six_character_long">Password must be at least 6 characters long</string>
    <string name="toast_problem_creating_account">Problem creating an account. Please try again.</string>

    <!--provider strings-->
    <string name="exception_unknown_uri">Cannot query unknown URI</string>
    <string name="exception_insert_not_supported">"Insertion is not supported for "</string>
    <string name="exception_drive_requires_a_name">Drive requires a name</string>
    <string name="exception_drive_requires_a_date">Drive requires a recruitment date</string>
    <string name="exception_drive_requires_a_location">Drive requires a location of conduct</string>
    <string name="exception_drive_requires_a_job_profile">Drive requires valid job position</string>
    <string name="exception_drive_requires_drive_description">Drive requires valid job description</string>
    <string name="exception_drive_requires_a_valid_drive_key">Drive requires valid drive key</string>

    <string name="exception_deletion_not_supported">Deletion is not supported for </string>
    <string name="exception_update_not_supported">Update is not supported for </string>

    <string name="heading_emplotyer">Employer</string>
    <string name="heading_recruitment_date">Hiring on:</string>
    <string name="heading_recruitment_location">Location:</string>
    <string name="heading_job_profile">Position:</string>
    <string name="heading_company_name">Company Name</string>
    <string name="heading_drive_date">Recruitment Date</string>
    <string name="heading_job_description">Drive Description</string>
    <string name="text_publish_button">Publish</string>
    <string name="heading_forgot_password">Forgot Password?</string>
    <string name="password_reset_guide">Give us your email, we\'ll reset that up!</string>
    <string name="hint_email">Email</string>
    <string name="text_button_send_password">Send reset password instruction</string>
    <string name="text_sign_up_button">Sign me up, instead</string>
    <string name="hint_password">Password</string>
    <string name="text_button_sign_in">Sign In</string>
    <string name="text_button_forgot_password">Forgot my password. Reset it now !</string>
    <string name="text_button_not_registered_yet">Not registered. Sign me up instead</string>
    <string name="text_button_already_registered_sign_in">Already registered. Sign me in instead</string>
    <string name="text_button_sign_up">Sign Up</string>

    <string name="check_internet_connectivity">Check internet connectivity!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="spinner_title">City</string>
    <string name="city_bengaluru">Bengaluru</string>
    <string name="city_pune">Pune</string>
    <string name="city_hyderabad">Hyderabad</string>
    <string name="city_mumbai">Mumbai</string>
    <string name="city_new_delhi">New Delhi</string>

    <string name="bottom_navigation_discard">Discard</string>
    <string name="bottom_navigation_save_offline">Save for later</string>
    <string name="bottom_navigation_publish">Publish</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_navigation_drawer">www.enpassio.com</string>

    <string name="action_settings">Settings</string>
    <string name="dialog_alert">Discard Alert!</string>
    <string name="sure_to_exit_message">Are you sure you want to exit?</string>
    <string name="retrieve_saved_post">Retrieve file from saved database?</string>
    <string name="retrieve_saved_post_button">Button for retrieving file from saved database?</string>
    <string name="button_for_sending_reset_password_instruction">Button for sending password reset instructions</string>
    <string name="button_for_sign_up">SignUp button</string>
    <string name="button_for_sign_in">SignIn button</string>
    <string name="button_for_saving_user_profile_data">Save User Profile data</string>
    <string name="fab_for_new_post_creation">FAB for publishing a new post</string>
    <string name="user_name_hint">your name</string>
    <string name="hint_user_city">your city</string>
    <string name="button_save">Save</string>
    <string name="heading_upcoming_drive">Upcoming Drives</string>
    <string name="action_user_profile">user profile</string>
    <string name="action_signout">sign out</string>
    <string name="profile_updated">Thanks for updating your details!</string>

</resources>

