<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content_job_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:id="@+id/company_name_text_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/company_name_heading_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:text="@string/heading_emplotyer"
                    android:textColor="@color/color_text_description"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/company_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_text_view_text"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hiring_date_text_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hiring_date_heading_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:text="@string/heading_recruitment_date"
                    android:textColor="@color/color_text_description"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/hiring_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_text_view_text"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hiring_place_text_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hiring_place_heading_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:text="@string/heading_recruitment_location"
                    android:textColor="@color/color_text_description"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/hiring_place_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_text_view_text"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/job_title_text_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/job_title_heading_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:text="@string/heading_job_profile"
                    android:textColor="@color/color_text_description"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/job_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_text_view_text"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/job_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:padding="8dp"
            android:textColor="@color/color_text_view_text"
            android:textSize="18sp" />
    </ScrollView>
</LinearLayout>